--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
     font-family: Helvetica, Arial, sans-serif;
     font-weight: 400;
     min-width: 320px;
+    max-width: 1280px;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
